// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIButton/> adds minwidth when we need it to, for short buttons 1`] = `
<button
  className="xui-button xui-button-main xui-button-medium xui-button-min-loader-width"
  disabled={false}
  onClick={[Function]}
  tabIndex={0}
  type="button"
>
  75px
</button>
`;

exports[`<XUIButton/> does retain layout checks with a myriad of combinations 1`] = `
<button
  className="xui-button xui-button-main xui-button-medium"
  disabled={false}
  onClick={[Function]}
  tabIndex={0}
  type="button"
>
  Hello, I am a long bit of text
</button>
`;

exports[`<XUIButton/> does retain layout checks with a myriad of combinations 2`] = `
<button
  className="xui-button xui-button-main xui-button-medium"
  disabled={true}
  onClick={[Function]}
  onKeyDown={null}
  tabIndex={-1}
  type="button"
>
  <div
    className="xui-button-hidden-content"
  >
    Hello, I am a long bit of text
  </div>
  <div
    aria-label="Loading"
    className="xui-loader xui-loader-small xui-button--loader xui-loader-retain-layout"
    role="progressbar"
  >
    <div
      className="xui-loader--dot"
    />
    <div
      className="xui-loader--dot"
    />
    <div
      className="xui-loader--dot"
    />
  </div>
</button>
`;

exports[`<XUIButton/> does retain layout checks with a myriad of combinations 3`] = `
<button
  className="xui-button xui-button-main xui-button-medium"
  disabled={true}
  onClick={[Function]}
  onKeyDown={null}
  tabIndex={-1}
  type="button"
>
  <div
    aria-label="Loading"
    className="xui-loader xui-loader-small xui-button--loader"
    role="progressbar"
  >
    <div
      className="xui-loader--dot"
    />
    <div
      className="xui-loader--dot"
    />
    <div
      className="xui-loader--dot"
    />
  </div>
</button>
`;

exports[`<XUIButton/> renders icon buttons with the correct icon size classes 1`] = `
<div>
  <button
    className="xui-button xui-button-icon xui-button-icon-medium"
    disabled={false}
    onClick={[Function]}
    tabIndex={0}
    type="button"
  />
  <button
    className="xui-button xui-button-icon xui-button-icon-small"
    disabled={false}
    onClick={[Function]}
    tabIndex={0}
    type="button"
  />
  <button
    className="xui-button xui-button-icon xui-button-icon-xsmall"
    disabled={false}
    onClick={[Function]}
    tabIndex={0}
    type="button"
  />
</div>
`;

exports[`<XUIButton/> renders icon buttons with the correct inverted class 1`] = `
<div>
  <button
    className="xui-button xui-button-icon xui-button-icon-medium"
    disabled={false}
    onClick={[Function]}
    tabIndex={0}
    type="button"
  />
  <button
    className="xui-button xui-button-icon xui-button-icon-inverted xui-button-icon-medium"
    disabled={false}
    onClick={[Function]}
    tabIndex={0}
    type="button"
  />
</div>
`;
